public class Aventurier extends Entite {

    public Aventurier(int p, int x, int y, String n)
    {
        super(p,x,y,n);
    }

}