package src.jeu;

public abstract class Case {
	
	

}
