abstract public class Entite{
    
}