@startuml 
title Zeldiablo


class Jeu {

}

class Labyrinthe {

}

abstract Case {

}

class Vide {

}

class Mur {

}

abstract Entite {

}

class Aventurier {

}

Jeu "1" --> "1" Labyrinthe : -labyrinthe
Labyrinthe "1" --> "0..*" Case : -cases
Jeu "1" --> "0..*" Aventurier : -aventurier
Aventurier "1" --> "1" Labyrinthe : -labyrinthe

Vide ..|> Case
Mur ..|> Case
Aventurier ..|> Entite

@enduml